Fixing text align & images sizes

--- a/Bootstrap/css/main.css
+++ b/Bootstrap/css/main.css
@@ -1,15 +1,20 @@
 .jumbotron {
     background-color: rgb(192, 189, 189);
     border-radius: 0;
-}
-.menu {
-    justify-content: center;
+    font-size: 30px;
+    color: rgb(85, 1, 1);
+    text-align: center;
+    margin-top: 40px;
 }
 
+.container {
+    margin-bottom: 20px;
+}
 footer {
+    height: 150px;
     background-color: black;
     color: white;
-
+    padding-top: 20px;
 }
 
 .card-stone {
@@ -29,6 +34,9 @@ footer {
     padding-right: 15px;
 }
 
-.address-text {
+.textt {
     text-align: center;
+}
+.mensajes {
+    margin-bottom: 20px;
 }
